# AudioManager

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: audioplayer.cpp  audioplayer.h  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  playlistmodel.cpp  playlistmodel.h
